tests/snapshots/command__subcommand_many.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
claptrap_subcommand_nested_arg3=('one' 'two')
