tests/snapshots/command__subcommand_precedence_over_arg.snap
---
source: tests/command.rs
expression: output
---
claptrap_subcommand='sub'
claptrap_arg=('1' '2' '3')
