tests/snapshots/command__subcommand_required.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF'
[1m[31merror:[0m '[33mmyprog[0m' requires a subcommand but one was not provided
  [subcommands: [32mtest[0m, [32mhelp[0m]

[1m[4mUsage:[0m [1mmyprog[0m <COMMAND>

For more information, try '[1m--help[0m'.
EOF
exit 1
