tests/snapshots/command__template.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_c99dd66c'
myprog 

[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_c99dd66c
exit 0
