tests/snapshots/command__version.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF_72ffdf99'
myprog v0.1.24
EOF_72ffdf99
exit 0
