tests/snapshots/command__visible_aliases.snap
---
source: tests/command.rs
expression: output
---
claptrap_subcommand='test'
claptrap_test_input='config.txt'
