tests/snapshots/command__visible_short_flag_aliases.snap
---
source: tests/command.rs
expression: output
---
claptrap_subcommand='test'
claptrap_test_input='file.txt'
